# MeMap

./: .coverage  .editorconfig  .flake8  .gitignore  TODO.md  alembic.ini  mypy_after_batch1.txt  pyproject.toml
.claude/: instructions.md
_archive/: README.md
_archive/legacy_wizard/viewmodels/: wizard_view_model.py
_archive/legacy_wizard/views/: wizard_logic.py  wizard_view.py
docs/: development_guidelines.md
scripts/: run_tests.sh
src/: main.py
src/common/: icons.py  logging_config.py
src/common/constants/: __init__.py  enums.py  excel_constants.py  image_constants.py  numeric_constants.py  paths.py  pdf_constants.py  table_constants.py
src/common/exceptions/: exceptions.py
src/common/execptions/: assiduidade.py
src/common/normalizers/: __init__.py  decimal_normalizer.py
src/common/themes/: __init__.py  colors.py  theme_manager.py
src/common/utils/: notification.py  pdf_export.py  validation.py
src/common/validators/: __init__.py  base_validator.py  exel_validator.py  form_validator.py  image_validator.py  numeric_validator.py  pdf_validator.py  recibo_validator.py
src/database/migrations/: env.py
src/database/migrations/versions/: 21589708b7e5_initial_migration.py  47b812ac1e1c_renomear_mapaassiduidade_para_.py
src/db/: __init__.py  session_manager.py
src/db/models/: base_mixin.py  mapas.py  user.py
src/examples/: assiduidade_exceptions_example.py
src/frontend/: main.py  main_view.py
src/frontend/components/: __init__.py  calendar_controller.py  partilhado_widget.py
src/frontend/components/charts/: __init__.py  bar_chart.py  base_chart.py  chart_styles.py
src/frontend/components/notifications/: __init__.py  toast_config.py  toast_manager.py  toast_widget.py
src/frontend/styles/: component_styles.py  styles.py
src/frontend/viewmodels/: __init__.py  base_view_model.py  calendar_view_model.py  main_view_model.py  recibos_table_viewmodel.py  wizard_view_model.py
src/frontend/views/: calendar_dashboard.py  controller.py  main_view.py  notifications.py  recibos_table.py  wizard_logic.py  wizard_view.py
src/frontend/wizard/: README.md  __init__.py
src/frontend/wizard/models/: __init__.py  form_data.py  table_data.py  wizard_state.py
src/frontend/wizard/services/: __init__.py  calculation_service.py  data_service.py  export_service.py  validation_service.py
src/frontend/wizard/viewmodels/: __init__.py  calendar_viewmodel.py  form_viewmodel.py  table_viewmodel.py  wizard_coordinator.py
src/frontend/wizard/views/: __init__.py  calendar_view.py  form_view.py  table_view.py  wizard_view.py
src/frontend/workers/: async_worker.py
src/repositories/: assiduidade_repository.py  tabela_taxas_repository.py  taxas_repositorie.py
tests/: README.md  conftest.py  test_documentos.py  test_integration.py  test_logging_config.py  test_models.py  test_normalizers.py  test_notification.py  test_repositories.py  test_utils.py  test_validation.py
tests/frontend/: test_recibos_table.py
tests/frontend/wizard/: __init__.py  test_models.py  test_services.py  test_viewmodels.py  test_viewmodels_phase3.py
tests/validators/: test_excel_validator.py  test_excel_validator_extended.py  test_image_validator.py  test_image_validator_extended.py  test_numeric_validator.py  test_numeric_validator_extended.py  test_pdf_validator.py  test_pdf_validator_extended.py
tests/viewmodels/: test_recibos_table_viewmodel.py  test_viewmodels.py  test_wizard_view_model.py
