[tool.poetry]
name = "memap"
version = "0.1.0"
description = "Getão mapa mensais"
authors = ["mastervieira <javatang46@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
sqlalchemy = "^2.0.46"
pip = "^25.3"
pip-audit = "^2.10.0"
openpyxl = "^3.1.5"
reportlab = "^4.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
